--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js">
     </script>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -10,6 +11,13 @@
     </title>
 </head>
 <body>
+<div id="navigationContainer" class="col-m-12 col-12">
+    <ul id="navigationList" class="col-m-12 col-12">
+        <li>Something</li>
+        <li>Something else</li>
+    </ul>
+</div>
+<div style="clear: both;"></div>
 <div id="pageContent">
     <h2>
         Cards Against Humanity
@@ -58,15 +66,24 @@
     </form>
     <!-- gameHosting -->
     <div style="clear: both;"></div>
-    <!-- chatRoom: to enable players to chat globally or locally -->
+    <!-- chatRoom: to enable players to chat globally or locally --> <!-- TODO: add global and local integration -->
     <div id="chatRoom">
         <h3>
             Chat with fellow players
         </h3>
-        <div id="chatRoomUserProfile"><!-- User Profile goes here, along with image of user and username -->
-            <img src="images/default_profile_image.jpg" id="imgUserProfile"> Some text goes here and even longer text <br> and then some more
+        <div id="chatRoomUserProfileContainer">
+            <div id="chatRoomUserProfileImageContainer"><!-- User Profile goes here, along with image of user and username --> <!-- TDOO: allow user to change image, add javascript to allow image and user email to change -->
+                <img src="images/default_profile_image.jpg" id="chatRoomUserProfileImage">
+            </div>
+            <div id="chatRoomUserProfileEmailContainer">
+                <span id="chatRoomUserProfileEmail">
+                    Email shows here...
+                </span>
+            </div>
+            <div id="chatRoomUserProfileOptionsContainer"><!-- Options to change user profile -->
+                text
+            </div>
         </div>
-        <div id="chatRoomUserProfileOptions"><!-- Options to change user profile --></div>
     </div>
     <!-- chatRoom -->
 </div>
