Adds home to index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 
 <!-- Navbar -->
 <div class="top">
-  <div class="bar black card-2">
+  <div class="bar white card-2">
     <a class="bar-item button padding-large hide-medium hide-large right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="bar-item button padding-large">HOME</a>
     <a href="#band" class="bar-item button padding-large hide-small">LOGIN/SIGNUP</a>
@@ -114,36 +114,90 @@
 </div>
 
 <!-- Navbar on small screens -->
-<div id="navDemo" class="bar-block black hide hide-large hide-medium top" style="margin-top:46px">
+<div id="navDemo" class="bar-block white hide hide-large hide-medium top" style="margin-top:46px">
   <a href="#band" class="bar-item button padding-large">LOGIN/SIGNUP</a>
   <a href="#tour" class="bar-item button padding-large">CREATE/JOIN GAME</a>
   <a href="#contact" class="bar-item button padding-large">CHAT</a>
 </div>
 
 <!-- Page content -->
-<div class="content" style="max-width:2000px;margin-top:46px">
+<div class="content black" style="max-width:2000px;margin-top:46px">
   <!-- The Band Section -->
   <div class="container content center padding-64" style="max-width:800px" id="band">
-    <h2 class="wide">THE BAND</h2>
-    <p class="opacity"><i>We love music</i></p>
-    <p class="justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <div class="row padding-32">
+    <h2 class="wide">CARDS AGAINST HUMANITY</h2>
+    <p class="opacity"><i>A party game for horrible people.</i></p>
+    <p class="justify">Cards Against Humanity is a party game for horrible people.
+        Unlike most of the party games you've played before,
+        Cards Against Humanity is as despicable and awkward as you and your friends.<br><br>
+        The game is simple. Each round, one player asks a question from a black card,
+        and everyone else answers with their funniest white card.</p>
+    <div class="row padding-32 white">
       <div class="third">
-        <p>Name</p>
-        <img src="https://image.flaticon.com/icons/png/512/56/56763.png" class="round margin-bottom" alt="Random Name" style="width:60%">
+            <p><b>Step 1</b><br><br>
+            Judge: Wait.<br>
+            Player: Choose a funny white card to the black card given.</p>
       </div>
       <div class="third">
-        <p>Name</p>
-        <img src="https://image.flaticon.com/icons/png/512/56/56763.png" class="round margin-bottom" alt="Random Name" style="width:60%">
+            <p><b>Step 2</b><br><br>
+            Judge: Choose the funniest white card.<br>
+            Player: Wait.</p>
       </div>
       <div class="third">
-        <p>Name</p>
-        <img src="https://image.flaticon.com/icons/png/512/56/56763.png" class="round" alt="Random Name" style="width:60%">
+            <p><b>Step 3</b><br>
+            <img src="images/strong.jpg" class="round" alt="Random Name" style="width:60%"><br>
+            Laugh at your sorry friends and bask in the glory!</p>
       </div>
     </div>
   </div>
+
+
+
+
+    <!-- The Tour Section -->
+  <!--<div class="w3-black" id="tour">-->
+    <!--<div class="w3-container w3-content w3-padding-64" style="max-width:800px">-->
+      <!--<h2 class="w3-wide w3-center">TOUR DATES</h2>-->
+      <!--<p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>-->
+
+      <!--<ul class="w3-ul w3-border w3-white w3-text-grey">-->
+        <!--<li class="w3-padding">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>-->
+        <!--<li class="w3-padding">October <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>-->
+        <!--<li class="w3-padding">November <span class="w3-badge w3-right w3-margin-right">3</span></li>-->
+      <!--</ul>-->
+
+      <!--<div class="w3-row-padding w3-padding-32" style="margin:0 -16px">-->
+        <!--<div class="w3-third w3-margin-bottom">-->
+          <!--<img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">-->
+          <!--<div class="w3-container w3-white">-->
+            <!--<p><b>New York</b></p>-->
+            <!--<p class="w3-opacity">Fri 27 Nov 2016</p>-->
+            <!--<p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>-->
+            <!--<button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="w3-third w3-margin-bottom">-->
+          <!--<img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">-->
+          <!--<div class="w3-container w3-white">-->
+            <!--<p><b>Paris</b></p>-->
+            <!--<p class="w3-opacity">Sat 28 Nov 2016</p>-->
+            <!--<p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>-->
+            <!--<button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="w3-third w3-margin-bottom">-->
+          <!--<img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">-->
+          <!--<div class="w3-container w3-white">-->
+            <!--<p><b>San Francisco</b></p>-->
+            <!--<p class="w3-opacity">Sun 29 Nov 2016</p>-->
+            <!--<p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>-->
+            <!--<button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+
+
 <!-- End Page Content -->
 </div>
 
