--- a/public/index.html
+++ b/public/index.html
@@ -1,96 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head lang="en">-->
-    <!--<meta charset="UTF-8">-->
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <!--<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js">-->
-    <!--</script>-->
-    <!--<link rel="stylesheet" type="text/css" href="style.css">-->
-    <!--<title>-->
-        <!--Simple Cards Against Humanity Test-->
-    <!--</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div id="navigationContainer" class="col-m-12 col-12">-->
-    <!--<ul id="navigationList" class="col-m-12 col-12">-->
-        <!--<li>Something</li>-->
-        <!--<li>Something else</li>-->
-    <!--</ul>-->
-<!--</div>-->
-<!--<div style="clear: both;"></div>-->
-<!--<div id="pageContent">-->
-    <!--<h2>-->
-        <!--Cards Against Humanity-->
-    <!--</h2>-->
-    <!--&lt;!&ndash; frmUser: to enable user login/signUp/logout &ndash;&gt;-->
-    <!--<form id="frmUser" onsubmit="return false">-->
-        <!--<h3>-->
-            <!--Login or SignUp-->
-        <!--</h3>-->
-        <!--<label for="txtEmail">-->
-            <!--Email:-->
-        <!--</label>-->
-        <!--<input type="email" id="txtEmail" placeholder="name@example.com" required="required">-->
-        <!--<br><br>-->
-        <!--<label for="txtPassword">-->
-            <!--Password:-->
-        <!--</label>-->
-        <!--<input type="password" id="txtPassword" placeholder="password...">-->
-        <!--<br><br>-->
-        <!--<input type="button" id="btnLogout" value="Logout">-->
-        <!--<input type="button" id="btnSignUp" value="Sign up">-->
-        <!--<input type="button" id="btnLogin" value="Login">-->
-    <!--</form>-->
-    <!--&lt;!&ndash; frmUser &ndash;&gt;-->
-    <!--<div style="clear: both;"></div>-->
-    <!--&lt;!&ndash; gameHosting: to enable game create/join/start/ready &ndash;&gt;-->
-    <!--<form id="frmGameHosting" onsubmit="return false">-->
-        <!--<h3>Create or join a game</h3>-->
-        <!--<label for="rdoCreate">Create a game</label>-->
-        <!--<input type="radio" id="rdoCreate" value="Create" name="grpCreateJoin" checked="checked">-->
-        <!--<br><br>-->
-        <!--<label for="rdoJoin">-->
-            <!--Join a game-->
-        <!--</label>-->
-        <!--<input type="radio" id="rdoJoin" value="Join" name="grpCreateJoin">-->
-        <!--<br><br>-->
-        <!--<label for="txtGameId">-->
-            <!--Game ID:-->
-        <!--</label>-->
-        <!--<input type="text/plain" id="txtGameId" placeholder="ID will be generated." readonly="readonly" maxlength="4">-->
-        <!--<br><br>-->
-        <!--<input type="button" id="btnGameSubmit" value="Submit">-->
-        <!--<input type="button" id="btnGameExit" value="Exit Game">-->
-        <!--<br><br>-->
-        <!--<input type="button" id="btnGameStart" value="Start Game">-->
-    <!--</form>-->
-    <!--&lt;!&ndash; gameHosting &ndash;&gt;-->
-    <!--<div style="clear: both;"></div>-->
-    <!--&lt;!&ndash; chatRoom: to enable players to chat globally or locally &ndash;&gt; &lt;!&ndash; TODO: add global and local integration &ndash;&gt;-->
-    <!--<div id="chatRoom">-->
-        <!--<h3>-->
-            <!--Chat with fellow players-->
-        <!--</h3>-->
-        <!--<div id="chatRoomUserProfileContainer">-->
-            <!--<div id="chatRoomUserProfileImageContainer">&lt;!&ndash; User Profile goes here, along with image of user and username &ndash;&gt; &lt;!&ndash; TDOO: allow user to change image, add javascript to allow image and user email to change &ndash;&gt;-->
-                <!--<img src="images/default_profile_image.jpg" id="chatRoomUserProfileImage">-->
-            <!--</div>-->
-            <!--<div id="chatRoomUserProfileEmailContainer">-->
-                <!--<span id="chatRoomUserProfileEmail">-->
-                    <!--Email shows here...-->
-                <!--</span>-->
-            <!--</div>-->
-            <!--<div id="chatRoomUserProfileOptionsContainer">&lt;!&ndash; Options to change user profile &ndash;&gt;-->
-                <!--text-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-     <!--&lt;!&ndash;chatRoom &ndash;&gt;-->
-<!--</div>-->
-<!--<script src="index.js"></script>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html>
 <title>Cards Against Humanity</title>
@@ -209,8 +116,8 @@
 </div>
 
 <!-- Footer -->
-<footer>
-    footer goes here
+<footer id="footer">
+    Created by Yehya Eldeeb.
 </footer>
 
 <script>
