Adds a custom image for the navigation menu bars on small screens.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <!-- Navbar -->
 <div class="top">
     <div class="bar white card-2">
-        <a class="bar-item button padding-large hide-medium hide-large right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a class="bar-item button padding-large hide-medium hide-large right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><img src="images/menu.png" width="20px" height="20px"></a>
         <a href="#" class="bar-item button padding-large">HOME</a>
         <a href="#login" class="bar-item button padding-large hide-small">LOGIN/SIGNUP</a>
         <a href="#game" class="bar-item button padding-large hide-small">CREATE/JOIN A GAME</a>
